--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "node tools/copy-webviewer-files.js"
+    "postinstall": "node tools/copy-webviewer-files.js",
+    "live": "yarn build && netlify deploy --dir build --prod"
   },
   "eslintConfig": {
     "extends": [
